# packages-utf8proc

./: .gitignore  CMakeLists.txt  README.md  config.h.cmake  confusable_demo.pl  test_utf8proc.pl  test_uts39.pl  unicode.pl  unicode4pl.c  unicode_security.pl  unicode_security4pl.c  uniname.c  utf8proc.doc  uts39_data.c  uts39_data.h
data/: README.md
etc/: gen_uts39.pl
